--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <style>
 @import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
 </style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4SCWJ4NCP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y4SCWJ4NCP');
+</script>
 </head>
 <body>
 	<div class="container">
