--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 		<p>Luôn mở rộng vòng tay chào đón du khách phương xa</p>
 		<h2><a href="Địa điểm.html">Khám phá Trà Vinh >></a></h2>  
 		</div>
+		     <p style="font-family: 'Style Script', cursive; font-size: 30px;">Trà Vinh miền đất phù sa hiền lành chất phác nhưng không kém phần duyên dáng bởi nét đẹp độc đáo và mới lạ, vừa hiện đại nhưng lại giữ được phần truyền thống cổ xưa. Đây là mảnh đất mang đặc trưng của sự giao lưu văn hóa lâu đời từ ba cộng đồng dân tộc Kinh, Khmer, Hoa. Nền ẩm thực phong phú mang nhiều hương vị lạ lẫm, riêng biệt cùng những địa điểm du lịch, thắng cảnh lý tưởng sẽ là những điều bạn không thể bỏ qua. Người Trà Vinh chất phác thật thà, dễ thương và hiếu khách. Luôn luôn niềm nở mở rộng vòng tay chào đón du khách phương xa đến đây.</p>
 		<div class="footer">
 			
 <footer class="text-center text-lg-start bg-light text-muted">
