--- a/Địa điểm.html
+++ b/Địa điểm.html
@@ -60,6 +60,7 @@
 
 		<div class="content">
 			<h1><a href="#" data-toggle="tooltip" data-placement="top" title="Xem thêm...">Thắng Cảnh Trà Vinh</a></h1>
+			<p style="font-family: 'Style Script', cursive; font-size: 20px;">Trà Vinh có nhiều địa điểm tham quan du lịch rất đẹp và độc đáo, hãy cùng chúng tôi dạo quanh một vòng xem Trà Vinh có gì nhé...</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
              <img src="Images/con-chim-tra-vinh.jpg">
