--- a/Ẩm thực.html
+++ b/Ẩm thực.html
@@ -59,6 +59,7 @@
 
 		<div class="content">
 			<h1><a href="#" data-toggle="tooltip" data-placement="top" title="Xem thêm...">Độc Đáo Ẩm Thực Trà Vinh</a></h1>
+			<p style="font-family: 'Style Script', cursive; font-size: 20px;">Bạn đã sẵn sàng chưa!!! Giờ là lúc thưởng thức hương vị ẩm thực Trà Vinh. Ở đây có nhiều món ăn có hương vị riêng mang nét độc đáo của một vùng quê miền Tây. Đặc biệt, Trà Vinh có sản phẩm Hoa Mật Dừa rất nổi tiếng, là một thương hiệu xuất khẩu đi nhiều nước và có giá trị dinh dưỡng cao. Nào hãy cùng khám phá nhé.</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
              <img src="Images/dua-sap-2-081336_899.jpg">
