--- a/Văn hóa.html
+++ b/Văn hóa.html
@@ -59,6 +59,7 @@
 		</div>
 		<div class="content">
 			<h1><a href="#" data-toggle="tooltip" data-placement="top" title="Xem thêm...">Văn Hóa Đất Trà Vinh</a></h1>
+			<p style="font-family: 'Style Script', cursive; font-size: 20px;">Nét văn hóa Trà Vinh mang đặc trưng của sự giao thoa giữa ba cộng đồng dân tộc lớn là Kinh, Khmer, Hoa. Hãy tạm thời gác lại những lo âu, toan tính phiền muộn để cùng đắm mình vào không gian văn hoa người Khmer nhé.</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
              <img src="Images/unnamed.jpg" alt="Thả đèn gió">
