--- a/Homestay.html
+++ b/Homestay.html
@@ -56,6 +56,7 @@
 		</div>
 		<div class="content">
 			<h1><a href="#" data-toggle="tooltip" data-placement="top" title="Xem thêm...">Homestay Lý Tưởng</a></h1>
+			 <p style="font-family: 'Style Script', cursive; font-size: 20px;">Bạn đang băn khoăn và trăn trở tìm một nơi dừng chân lý tưởng nhưng vẫn đảm bảo sự tận hưởng không khí mới lạ? Ở Trà Vinh chúng tôi xin giới thiệu đến bạn những địa điểm homestay độc đáo sau đây.</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
              <img src="Images/Mekong Garden Homestay.jpeg">
