--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 
 		<div id="banner">
-		<img src="Images/aobaom-3.jpg">
+		<img src="Images/aobaom-3.jpg" alt="ao bà om">
 		<h1>Trà Vinh tình đất tình người</h1>
 		<p>Luôn mở rộng vòng tay chào đón du khách phương xa</p>
 		<h2><a href="Địa điểm.html">Khám phá Trà Vinh >></a></h2>  
