--- a/Địa điểm.html
+++ b/Địa điểm.html
@@ -63,11 +63,11 @@
 			<p style="font-family: 'Style Script', cursive; font-size: 20px;">Trà Vinh có nhiều địa điểm tham quan du lịch rất đẹp và độc đáo, hãy cùng chúng tôi dạo quanh một vòng xem Trà Vinh có gì nhé...</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/con-chim-tra-vinh.jpg">
+             <img src="Images/con-chim-tra-vinh.jpg" alt="cồn chim Trà Vinh">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Cồn Chim Trà Vinh</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/bien-ba-dong.jpg">
+             <img src="Images/bien-ba-dong.jpg" alt="Biển Ba Động">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Biển Ba Động</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
@@ -75,15 +75,15 @@
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Chợ Trà Vinh</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/Du-lich-tra-vinh-1-min-750x491.jpg">
+             <img src="Images/Du-lich-tra-vinh-1-min-750x491.jpg" alt="Chùa Hang">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Chùa Hang Trà Vinh</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/cu-lao-tan-quy5.jpg">
+             <img src="Images/cu-lao-tan-quy5.jpg" alt="Cù Lao Tân Huy">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Cù Lao Tân Huy</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/khu-du-lich-sinh-thai-huynh-kha.jpg">	
+             <img src="Images/khu-du-lich-sinh-thai-huynh-kha.jpg" alt="Khu du lịch sinh thái Huỳnh Kha">	
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Khu Du Lịch Sinh Thái Huỳnh Kha</a></p>
              </div>
         </div>
