--- a/Ẩm thực.html
+++ b/Ẩm thực.html
@@ -53,20 +53,17 @@
         </div>
         </div>
         </nav>
-
-			
-		</div>
-
-		<div class="content">
+	</div>
+	<div class="content">
 			<h1><a href="#" data-toggle="tooltip" data-placement="top" title="Xem thêm...">Độc Đáo Ẩm Thực Trà Vinh</a></h1>
 			<p style="font-family: 'Style Script', cursive; font-size: 20px;">Bạn đã sẵn sàng chưa!!! Giờ là lúc thưởng thức hương vị ẩm thực Trà Vinh. Ở đây có nhiều món ăn có hương vị riêng mang nét độc đáo của một vùng quê miền Tây. Đặc biệt, Trà Vinh có sản phẩm Hoa Mật Dừa rất nổi tiếng, là một thương hiệu xuất khẩu đi nhiều nước và có giá trị dinh dưỡng cao. Nào hãy cùng khám phá nhé.</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/dua-sap-2-081336_899.jpg">
+             <img src="Images/dua-sap-2-081336_899.jpg" alt="Dừa sáp Cầu Kè">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Dừa Sáp Cầu Kè</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/314986-cap-banh-tet-tra-cuon-hai-ly-loai-lon-dac-san-tra-vinh-chinh-goc.jpg">
+             <img src="Images/314986-cap-banh-tet-tra-cuon-hai-ly-loai-lon-dac-san-tra-vinh-chinh-goc.jpg" alt="Bánh Tét Trà Cuôn">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Bánh Tét Trà Cuôn</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
@@ -78,11 +75,11 @@
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Chù Ụ Rang Me</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/58527-bun-nuoc-leo-tra-vinh-7-700x700.jpg">
+             <img src="Images/58527-bun-nuoc-leo-tra-vinh-7-700x700.jpg" alt="Bún Nước Lèo Trà Vinh">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Bún Nước Lèo Trà Vinh</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/mat-hoa-dua-sokfarm-chai-700ml.jpg">	
+             <img src="Images/mat-hoa-dua-sokfarm-chai-700ml.jpg" alt="Hoa Mật Dừa">	
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Hoa Mật Dừa</a></p>
              </div>
         </div>
