--- a/Homestay.html
+++ b/Homestay.html
@@ -59,26 +59,26 @@
 			 <p style="font-family: 'Style Script', cursive; font-size: 20px;">Bạn đang băn khoăn và trăn trở tìm một nơi dừng chân lý tưởng nhưng vẫn đảm bảo sự tận hưởng không khí mới lạ? Ở Trà Vinh chúng tôi xin giới thiệu đến bạn những địa điểm homestay độc đáo sau đây.</p>
 			 <div class= "row">
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/Mekong Garden Homestay.jpeg">
+             <img src="Images/Mekong Garden Homestay.jpeg" alt="Mekong Garden Homestay">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Mekong Garden Homestay</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/Bungalow Biển Ba Động.jpg">
+             <img src="Images/Bungalow Biển Ba Động.jpg" alt="Bungalow ở Biển Ba Động">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Bungalow Biển Ba Động</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/homestay-tra-vinh-megateen-12.jpg">
+             <img src="Images/homestay-tra-vinh-megateen-12.jpg" alt="Guesthouse777">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Guesthouse 777</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/homestay-tra-vinh-megateen-8.jpg">
+             <img src="Images/homestay-tra-vinh-megateen-8.jpg" alt="Sounsia homestay">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Sounsia Homestay</a></p>
              </div>
              <div class ="col-12 col-sm-6 col-md-4 image">
-             <img src="Images/Hội-Du-Lịch-Việt-Nam-u.jpeg">
+             <img src="Images/Hội-Du-Lịch-Việt-Nam-u.jpeg" alt="Trà Vinh Lodge">
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Trà Vinh Lodge</a></p>
              </div>
-             <div class ="col-12 col-sm-6 col-md-4 image">
+             <div class ="col-12 col-sm-6 col-md-4 image" alt="Coco Riverside Lodge">
              <img src="Images/222545406.jpg">	
              <p><a href="#" data-toggle="tooltip" data-placement="top" title="Thông tin chi tiết">Coco Riverside Lodge</a></p>
              </div>
